# ChangeLog for dev-vcs/blame
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Nov 2009; James Rowe <jnrowe@gmail.com> blame-1.3.1.ebuild:
  Switched to EAPI 2.

  22 Sep 2009; James Rowe <jnrowe@gmail.com> blame-1.3.1.ebuild:
  Dropped arm keyword, as the package is tracked in the arm overlay.

  21 May 2009; James Rowe <jnrowe@gmail.com> blame-1.3.1.ebuild:
  Keyworded amd64.

  07 May 2009; James Rowe <jnrowe@gmail.com> blame-1.3.1.ebuild:
  Whitespace removal, to fix pcheck warning.

  21 Apr 2009; James Rowe <jnrowe@gmail.com> +metadata.xml,
  +puzzles-r8167-build_fixes.patch:
  Imported from pre-github misc overlay.
