@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST blame-1.3.1.tar.gz 483406 RMD160 fef43320fd6148f4543824642d6b2e86227af245 SHA1 9183b9b5f1db0611bda1b724e99957480764bbd7 SHA256 1943b145c0d69d1b3390e9417b76822af0b1bbe53cdaddf76e8497f2e79d58ca
-EBUILD blame-1.3.1.ebuild 774 RMD160 596211a30048d5a9159bb9d4c4196abd815dedb1 SHA1 aa35b5495bd259a1d7a7132eba4e1ce532271f41 SHA256 f14b7677db4176d5fcb539ecdcae456a0314c79b232e4a11fcc75ad1fb3eea72
-MISC ChangeLog 671 RMD160 a8b4e7f2aff7e122a318fdb18ca1e1746741a9b7 SHA1 ccedb2a4757277d35a5bffa67b729ecfb13067b0 SHA256 999cf999d455fce145e255b8e2501c63e089a4c44acace96abc798c048baa68a
+EBUILD blame-1.3.1.ebuild 685 RMD160 651ac57ffd197e80bcccad6c2767c15e5b7c2d86 SHA1 575bb23f84fe90bb64e28d2a12ee2a72db78689d SHA256 99c8b8fbffe633899ac493113c658a576539abfa52831190df1c5f3eecc37c36
+MISC ChangeLog 783 RMD160 dd5cc58acb5c00dd5e71c60064e3e25d707fbc59 SHA1 01ee5f42cab700c540d396d26bbef6b349b2152e SHA256 ed3fdcc9778a4037d1be35192eb87cd6b931f22941fbbbd88e22d8ebd64e4812
 MISC metadata.xml 680 RMD160 46691cf04f2a965532cd5ff1411a462628378ebe SHA1 529cfc6fff0cea0de73c5be32481fb533849cd11 SHA256 9fe4fcd35336f94d999cb0680c83611b2aa4c06694dbaa088dacb5341719aba8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkvlNcgACgkQzJrj3cAXR0nQswCfb9IS8PCCEx70OEcVGwmwIbq4
-E0kAn2/wT+VpvwL2+lRyRFHnufajYpZ0
-=qDvF
+iEYEARECAAYFAkwQWXQACgkQzJrj3cAXR0mtdgCfX2BBwEDH/E2EwfdByRCe7lXD
+HigAnj6hwFZfEFSntBC4b1rtsu/lYf4r
+=ypGZ
 -----END PGP SIGNATURE-----
