@@ -1,6 +1,9 @@
 # ChangeLog for dev-vcs/blame
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  10 Jun 2010; James Rowe <jnrowe@gmail.com> blame-1.3.1.ebuild:
+  Switched to using base.eclass' src_install.
 
   12 Nov 2009; James Rowe <jnrowe@gmail.com> blame-1.3.1.ebuild:
   Switched to EAPI 2.
